# semestralna_praca_POS

./: CMakeLists.txt  client_app  server_app
client/: client.c  client.h  display.c  display.h  main.c  main_client.c  menu.c  menu.h  network.c  network.h
client/networking/: client_network.c  client_network.h  message.c  message.h
client/ui/: menu.c  menu.h  parking_view.c  parking_view.h  statistics_view.c  statistics_view.h
client/utils/: input_parser.c  input_parser.h
common/: config.h  protocol.c  protocol.h  utils.c  utils.h
server/: client_handler.c  client_handler.h  main.c  main_server.c  parking.c  parking.h  server.c  server.h  server_context.c  server_context.h  simulation.c  simulation.h  statistics.c  statistics.h  vehicle.c  vehicle.h
server/networking/: client_handler.c  client_handler.h  message.c  message.h  server_network.c  server_network.h
server/parking/: parking_lot.c  parking_lot.h  vehicle.c  vehicle.h
server/simulation/: event_generator.c  event_generator.h  simulation.c  simulation.h  simulation_config.c  simulation_config.h  time_manager.c  time_manager.h
server/statistics/: statistics.c  statistics.h
server/utils/: logger.c  logger.h  random_generator.c  random_generator.h
shared/: constants.h  dto.h  protocol.c  protocol.h
